--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -1,5 +1,3 @@
-@import "compass"
-
 * 
   margin: 0
   outline: 0
@@ -27,8 +25,7 @@ body
     overflow: hidden
     position: absolute
     width: 100%%
-    +box-shadow(rgba(black, .5) 0px 0px 5px)
-    +experimental(transform, translate3d(120%,0%,0))
+    +experimental(transform, translate3d(120%,0%,0) scale(1))
     +experimental(transform-style, preserve-3d)
     +single-transition(all, 0.5s, ease-in-out)
 
@@ -125,9 +122,24 @@ body
 
 
 section
-  .top-menu
-    height: 46px
+  .container
+    overflow: scroll
+    -webkit-overflow-scrolling: touch
+    height: 368px
+    margin-top: 48px
+    
+
+    .content-wrapper
+      margin: 10px
+      border: 1px solid #d4d4d4
+      background: #fff
+      overflow: hidden
+      +border-radius(5px)
+  header
+    height: 48px
     width: 100%
+    position: fixed
+    top: 0px
     border-bottom: 1px solid #2f3742
     +background-image(linear-gradient(#2d82c3, #1d6c9a))
     +text-shadow(#1d5d89 0px -1px -1px)
@@ -136,16 +148,16 @@ section
       color: #fff
       font-size: 18px
       font-weight: bold
-      line-height: 44px
+      line-height: 48px
       text-align: center
 
     .button
       border: 1px solid #054a71  
       color: #fff
       font-weight: bold
-      height: 30px
+      height: 32px
       left: 10px
-      line-height: 28px
+      line-height: 30px
       position: absolute
       text-align: center
       text-decoration: none
@@ -167,6 +179,7 @@ section
         border-top: 1px solid #ccc
         height: auto
         width: 100%
+
 
         li a
           border-bottom: 1px solid #ccc
@@ -195,8 +208,6 @@ section
       +experimental(transform, translate3d(39%,0%,0))      
   &#search  
     +box-shadow(0 0px 5px rgba(black, .5))
-    .content-container
-      margin: 10px
 
 
 
@@ -204,36 +215,21 @@ section
   &#results          
     ul
       background: url('../images/fw-loading-test.gif') no-repeat center center
-      height: 100%
-      min-height: 420px
-      padding-bottom: 50px 
+      background-size: 88px, 88px
+      min-height: 300px
+
       li
         border-bottom: 1px solid #dcdde1  
-        height: 74px
+        height: 88px
         overflow: hidden
         padding: 10px 10px
         +text-shadow(#fff 0px 1px 1px)
 
         &:nth-child(even)
-          background: #fff
+          background: #f2f2f2
 
-        span.price
-          background: #e9eaef    
-          border: 1px solid #c2c3c6
-          color: #fff
-          float: right
-          font-weight: bold
-          height: 36px
-          line-height: 28px
-          margin-left: 2%
-          margin-top: 8px
-          max-width: 100px
-          padding: 3px
-          text-align: center
-          text-decoration: none
-          width: 30%
-          +border-radius(5px)
-          +box-shadow(inset 0 2px 1px #dadbdf, 0 1px 1px white)
+        &:last-child
+          border-bottom: 0px
 
 
           h1
@@ -253,33 +249,113 @@ section
 
             
 
-        span.information
+        span.primary
           float: left
-          height: 43px
-          padding-right: 2%
-          width: 68%
+          width: 100%
 
-          h1
+          h3
             color: #404040
-            font-size: 16px
+            font-size: 18px
             font-weight: bold
-            line-height: 18px
+            line-height: 22px
             overflow: hidden
             white-space: nowrap
             width: 98%
             +experimental(text-overflow, ellipsis)
-          p
+          h4
             color: #818181
-            font-size: 13px
+            font-size: 14px
             font-weight: normal
             height: auto
-            line-height: 15px  
+            line-height: 16px  
             overflow: hidden
             white-space: nowrap
             width: 100%
+            text-transform: capitalize
             +experimental(text-overflow, ellipsis)            
-  &#details
-    display: none
+        
+        span.secondary
+          float: left
+          width: 100% 
+          margin-top: 5px
+
+          .button
+            width: 30%
+            height: 25px
+            float: left
+            +border-radius(3px)
+            margin-right: 5px
+            color: #fff
+            line-height: 25px
+            text-align: center
+            font-size: 16px
+            font-weight: bold
+            -webkit-box-shadow: inset 0 1px 1px rgba(43, 48, 60, .18), 0 1px 0 white
+            
+            &.price 
+              background: #287cb7
+              +text-shadow(#3b819f 0px 1px 1px)
+
+            &.distance
+              background: #287cb7
+              +text-shadow(#3b819f 0px 1px 1px)
+            &.type
+              background: #287cb7
+              +text-shadow(#3b819f 0px 1px 1px)
+  &#detailsView
+    h2
+      margin: 0px
+      font-size: 24px
+
+    h3
+      font-size: 18px
+
+    .map-container
+      overflow: hidden
+      border-bottom: 1px solid #d4d4d4
+      min-height: 100px
+      +single-transition(all, 0.5s, ease-in-out)
+      img
+        max-width: 100%
+        +border-radius(5px 5px 0px 0px)
+        display: block
+
+    address
+      font-style: normal   
+      font-size: 12px
+      padding: 15px
+      padding-left: 20px
+      border-top: 1px solid #d4d4d4
+      border-bottom: 1px solid #d4d4d4
+
+
+    .price-distance-container
+      overflow: hidden
+      span
+        width: 50%
+        float: left
+        height: 44px
+        line-height: 44px
+        text-align: center
+
+        &:first-child
+          border-right: 1px solid #d4d4d4
+
+    .directions a
+      width: 80%
+      height: 44px
+      display: block
+      margin: 10px auto
+      text-align: center
+      line-height: 44px
+      font-size: 18px
+      font-weight: bold
+      color: #fff
+      +background-image(linear-gradient(#2d82c3, #1d6c9a))
+      +border-radius(5px)
+      +text-shadow(#1d5d89 0px -1px -1px)
+
+
 
 
 input::-webkit-input-placeholder
@@ -289,25 +365,10 @@ input:-moz-placeholder
 
 
 
-.stationDetails
-  h1
-    width: 80%
-    height: 33px
-    position: absolute
-    line-height: 33px
-    top: 46px
-    left: 0px
-    right: 0px
-    margin: 0 auto
-    color: #fff
-    text-align: center
-    +background-image(linear-gradient(#3a393c, #2c292e))
-    +border-radius(0px 0px 5px 5px)  
-    +box-shadow(inset -5 -1px 2px #fff, 0 0px 5px rgba(0, 0, 0, .5))
-  .map-container
 
-    img
-      max-width: 100%
+
+
+
 
 
 /* #Media Queries
