Got ready for Map building
Abstracted bunches of code for building HTML, added callback
functionality to getXMLData function, enabled Map Nearby button and
switch in form submission event handler to send results data to either
list or map based result view.

Added hidden form field to HAML file to allow for switching between
list and map results views.

--- a/index.haml
+++ b/index.haml
@@ -56,6 +56,7 @@
                   %option{:value => "", :selected => "selected", :disabled => "disabled"} Surrounding
                   %option{:value => "1"} Yes
                   %option{:value => "1"} No
+          %input{:id => 'resultsType', :type => 'hidden', :value => 'list'}
           .button-container
             %button{:type => 'submit', :id => 'submitterator', :name => 'submitterator'} Find Fuel Prices
 
