--- a/index.haml
+++ b/index.haml
@@ -2,7 +2,7 @@
 %head
   %meta{:charset => "utf-8"}
   %meta{'http-equiv' => "X-UA-Compatible", :content => "IE=edge,chrome=1"}
-  %title FuelWatch Demo
+  %title FuelWatch
   %meta{:content => "", :name => "description"}
   %meta{:content => "", :name => "author"}
   %meta{:content => "True", :name => "HandheldFriendly"}
@@ -10,7 +10,8 @@
   %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", :name => "viewport"}
   %meta{:content => "yes", :name => "apple-mobile-web-app-capable"}
   %meta{:content => "black", :name => "apple-mobile-web-app-status-bar-style"}
-  %link{:href => "/favicon.ico", :rel => "shortcut icon"}
+  %link{ :rel => "apple-touch-icon-precomposed", :href => "images/icon.png"}
+  %link{ :rel => "apple-touch-icon-precomposed", :href => "images/icon@2x.png", :sizes => "114x114"}
   /[if IE]
     %script{:src => "http://html5shiv.googlecode.com/svn/trunk/html5.js"}
   %link{:href => "stylesheets/stylesheet.css", :rel => "stylesheet"}
