--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -167,6 +167,25 @@ section
       +border-radius(4px)
       +box-shadow(inset 0 1px 1px rgba(255, 255, 255, .21), 0 1px 0px rgba(255, 255, 255, .2))
 
+    .fuel-selector
+      position: absolute
+      right: 10px
+      top: 7px
+
+      select
+        border: 1px solid #054a71  
+        color: #fff
+        font-weight: bold
+        height: 32px
+        line-height: 30px
+        padding-left: 10px
+        text-align: center
+        text-decoration: none
+        width: 60px
+        +background-image(linear-gradient(#2d83c4, #1d6c9a))  
+        +border-radius(4px)
+        +box-shadow(inset 0 1px 1px rgba(255, 255, 255, .21), 0 1px 0px rgba(255, 255, 255, .2))      
+        +appearance(none)  
 
   &#home
     margin-left: 0px
@@ -392,8 +411,25 @@ input:-moz-placeholder
 /* Tablet Portrait size to standard 960 (devices and browsers)
 @media only screen and (min-width: 768px) and (max-width: 959px)
   body
+    width: 100%
+    
     section
-      width: 100% 
+      background: #f9f9f9
+      height: 100%
+      overflow-x: hidden
+      overflow: hidden
+      position: absolute
+      width: 67.5%
+      +experimental(transform, translate3d(200%,0%,0) scale(1))
+      +experimental(transform-style, preserve-3d)
+      +single-transition(all, 0.5s, ease-in-out)
+
+      &#home
+        width: 78%
+
+
+      &.current
+        +experimental(transform, translate3d(250px,0%,0) scale(1))
   
   
 /* All Mobile Sizes (devices and browser)
