--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -5,7 +5,7 @@
   +box-sizing(border-box)
 
 body
-  background: url('../images/main-bg-map.png') #2f3742
+  background: #2f3742
   background-size: 320px, 460px
   color: #5a5a5a
   height: 100%
@@ -28,7 +28,14 @@ body
     +experimental(transform, translate3d(120%,0%,0) scale(1))
     +experimental(transform-style, preserve-3d)
     +single-transition(all, 0.5s, ease-in-out)
+    +box-shadow(0 0px 5px rgba(black, .5))
 
+    &#map
+      +experimental(transform, translate3d(0%,0%,0))
+      background: #2f3742
+
+      img
+        max-height: 110%
 
     &.current
       +experimental(transform, translate3d(0%,0%,0))
@@ -192,7 +199,7 @@ section
     +border-radius(5px 5px 5px 5px)
     +experimental(transform, translate3d(0%,0%,0))  
     nav
-      margin-top: 100px
+      margin-top: 115px
       ul
         border-bottom: 1px solid #fff        
         border-top: 1px solid #ccc
