- Hacked FW logo image into home page. - Added CSS for img to _layout.sass. - Tweaked mapBg function

--- a/index.haml
+++ b/index.haml
@@ -22,6 +22,7 @@
 %body
   %section#map    
   %section#home.current
+    %img{:src => 'images/fuelwatch-improved-hi.png', :width => '320', :alt => ''}
     %nav
       %ul
         %li#near-me
