--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -197,9 +197,16 @@ section
   &#home
     margin-left: 0px
     +border-radius(5px 5px 5px 5px)
-    +experimental(transform, translate3d(0%,0%,0))  
+    +experimental(transform, translate3d(0%,0%,0))
+    img
+      width: 90%
+      max-width: 320px
+      margin-top: 8px
+      padding-left: 12px
+      padding-right: 12px
     nav
-      margin-top: 115px
+      //margin-top: 115px
+      margin-top: 35px
       ul
         border-bottom: 1px solid #fff        
         border-top: 1px solid #ccc
