--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -200,7 +200,7 @@ label, input[type=button], input[type=submit], button
 
 //  j.mp/webkit-tap-highlight-color
 a:link
-  -webkit-tap-highlight-color: #FF5E99
+  -webkit-tap-highlight-color: rgba(0,0,0,0.1)
 
 // always force a scrollbar in non-IE
 html
