--- a/index.haml
+++ b/index.haml
@@ -15,22 +15,30 @@
   /[if IE]
     %script{:src => "http://html5shiv.googlecode.com/svn/trunk/html5.js"}
   %link{:href => "stylesheets/stylesheet.css", :rel => "stylesheet"}
+  %link{:href => "stylesheets/fonts.css", :rel => "stylesheet"}
   %script{:type => "text/javascript", :src => "http://maps.googleapis.com/maps/api/js?sensor=false"}
   %script{:charset => "utf-8", :src => "js/jquery.min.js", :type => "text/javascript"}
   %script{:type => "text/javascript", :src => "js/app.js"}
 
+
 %body
   %section#map    
   %section#home.current
-    %img{:src => 'images/fuelwatch-improved-hi.png', :width => '320', :alt => ''}
+    %img{:src => 'images/fuelwatch-improved-hi.png', :class => 'top-logo', :alt => ''}
     %nav
       %ul
         %li#near-me
-          %a{:id => 'findMeNow', :name => 'findMeNow', :class => 'button near-me'} Fuel Prices Near Me
+          %a{:id => 'findMeNow', :name => 'findMeNow', :class => 'button near-me'}
+            %i.icon-map-marker.icon-large
+            Fuel Prices Near Me
         %li#map
-          %a{:id => 'mapNearby', :name => 'mapNearby', :class => 'button map'} Nearby Fuel Stations
+          %a{:id => 'mapNearby', :name => 'mapNearby', :class => 'button map'} 
+            %i.icon-road.icon-large
+            Nearby Fuel Stations
         %li#search
-          %a{:id => 'advSearch', :name => 'advSearch', :class => 'button advSearch'} Advanced Search
+          %a{:id => 'advSearch', :name => 'advSearch', :class => 'button advSearch'} 
+            %i.icon-search.icon-large
+            Advanced Search
           / %form{:id => 'searchForm', :action => 'search.jspx'}
           / %button{:type => 'submit', :id => 'submitterator', :name => 'submitterator'} Advanced Search   
   %section#search
@@ -39,8 +47,8 @@
       .back-button
         %a.home.button{:href => '#'} Home
     .container
-      .content-wrapper
-        %form{:id => 'searchForm', :action => 'search.jspx'}
+      %form{:id => 'searchForm', :action => 'search.jspx'}
+        .content-wrapper
           .input-container
             %ul
               %li 
@@ -55,14 +63,15 @@
                   %option{:value => "6"} 98 RON
                   %option{:value => "7"} B20
               %li
-                %select
-                  %option{:value => "", :selected => "selected", :disabled => "disabled"} Surrounding
-                  %option{:value => "1"} Yes
-                  %option{:value => "1"} No
-          %input{:id => 'resultsType', :type => 'hidden', :value => 'list'}
-          .button-container
-            %button{:type => 'submit', :id => 'submitterator', :name => 'submitterator'} Find Fuel Prices
 
-  
+                .slider
+                  Surrounding Suburbs
+                  %input{:type => "checkbox"}/
+          %input{:id => 'resultsType', :type => 'hidden', :value => 'list'}
+        .content-wrapper.button     
+          .button-container
+            %button{:type => 'submit', :id => 'submitterator', :name => 'submitterator'} 
+              %i.icon-search.icon-large
+              Find Fuel Prices
 
 
