--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -6,7 +6,6 @@
 
 body
   background: #2f3742
-  background-size: 320px, 460px
   color: #5a5a5a
   height: 100%
   min-height: 416px
@@ -19,7 +18,7 @@ body
   -webkit-text-size-adjust: none
   
   section
-    background: #f9f9f9
+    background: #fafafa
     height: 100%
     overflow-x: hidden
     overflow: hidden
@@ -30,372 +29,417 @@ body
     +single-transition(all, 0.5s, ease-in-out)
     +box-shadow(0 0px 5px rgba(black, .5))
 
-    &#map
+    &.current
       +experimental(transform, translate3d(0%,0%,0))
-      background: #2f3742
+
+    &#map
+      +experimental(transform, translate3d(0%,0%,0))      
+      background: url('../images/spinner-map.gif') no-repeat 11% center #2f3742
+      background-size: 24px, 24px
 
       img
         max-height: 110%
 
-    &.current
-      +experimental(transform, translate3d(0%,0%,0))
-
-  .button-container
-    background: #e9eaef    
-    border: 1px solid #c2c3c6
-    color: #fff
-    float: left
-    font-weight: bold
-    height: 100%
-    line-height: 28px
-    margin-bottom: 10px
-    overflow: hidden
-    padding: 3px
-    text-align: center
-    text-decoration: none
-    width: 100%
-    +border-radius(4px)
-    +box-shadow(inset 0 2px 1px #dadbdf, 0 1px 1px white)
-          
-    button
-      background-size: 44px, 88px
-      background: url('../images/button-icons-sprite.png') 0px -45px #4aa3c9  no-repeat  
-      border: 1px solid #449bc4       
+    .button-container button
+      
+      border: 0px
       color: #fff
       font-size: 18px
       font-weight: bold
       height: 44px
       line-height: 44px
-      padding-left: 45px      
-      text-align: left
-      text-shadow: #3b819f 0px 1px 1px
+           
+      text-align: center
       width: 100%
-      +border-radius(5px)             
-      +box-shadow(inset 0 1px 0px #8cc1d9, 0 1px 0px rgba(0, 0, 0, .1))
-
-  .input-container
-    background: #e9eaef    
-    border: 1px solid #c2c3c6     
-    color: #fff
-    float: left
-    font-weight: bold
-    height: 100%
-    line-height: 28px
-    margin-bottom: 10px  
-    overflow: hidden
-    padding: 3px
-    text-align: center
-    text-decoration: none
-    width: 100%
-    +border-radius(5px)
-    +box-shadow(inset 0 2px 1px #dadbdf, 0 1px 1px white)
-
-    ul       
-      border: 1px solid #ccc
-      margin: 0px
-      overflow: hidden
+      +background-image(linear-gradient(#2d82c3, #1d6c9a))
       +border-radius(5px)
+      +text-shadow(#1d5d89 0px -1px -1px)
+      +box-shadow(inset 0 1px 0px rgba(255, 255, 255, .21), 0 1px 0px rgba(255, 255, 255, .2))
 
-      li
-        border-bottom: 1px solid #ccc
-        background: #fff
+      i
+        margin-right: 5px
 
-        &:first-child
-          +border-radius(5px 5px 0px 0px )
 
-        &:last-child
-          border: 0px
-          +border-radius(0px 0px 5px 5px )
+
+
+
+
+
+    .input-container
+
+
+      ul       
+        margin: 0px
+        overflow: hidden
+        +border-radius(5px)
+
+        li
+          border-bottom: 1px solid #ccc
+          background: #fff
+          height: 50px
+
+          font-weight: bold
+          font-size: 14px
+  
           
 
+          &:first-child
+            +border-radius(5px 5px 0px 0px )
 
+          &:last-child
+            border: 0px
+            +border-radius(0px 0px 5px 5px )
 
-    input, select
-      background: #fff
-      border: 0px
-      color: #404040
-      font-size: 14px
-      height: 38px
-      padding: 0px 10px
-      width: 100%
-      +appearance(none)     
-      +border-radius(4px)      
-
-    select
-      background: url('../images/select-arrow-down.png') no-repeat center right  #fff
-      background-size: 32px, 11px
-
-
-
-
-section
-  .container
-    overflow: scroll
-    -webkit-overflow-scrolling: touch
-    height: 368px
-    margin-top: 48px
-    
-
-    .content-wrapper
-      margin: 10px
-      border: 1px solid #d4d4d4
-      background: #fff
-      overflow: hidden
-      +border-radius(5px)
-  header
-    height: 48px
-    width: 100%
-    position: fixed
-    top: 0px
-    border-bottom: 1px solid #2f3742
-    +background-image(linear-gradient(#2d82c3, #1d6c9a))
-    +text-shadow(#1d5d89 0px -1px -1px)
-
-    h1
-      color: #fff
-      font-size: 18px
-      font-weight: bold
-      line-height: 48px
-      text-align: center
-
-    .button
-      border: 1px solid #054a71  
-      color: #fff
-      font-weight: bold
-      height: 32px
-      left: 10px
-      line-height: 30px
-      position: absolute
-      text-align: center
-      text-decoration: none
-      top: 7px
-      width: 60px
-      +background-image(linear-gradient(#2d83c4, #1d6c9a))  
-      +border-radius(4px)
-      +box-shadow(inset 0 1px 1px rgba(255, 255, 255, .21), 0 1px 0px rgba(255, 255, 255, .2))
-
-    .fuel-selector
-      position: absolute
-      right: 10px
-      top: 7px
+      input, select
+        background: #fff
+        border: 0px
+        color: #666
+        font-size: 14px
+        height: 49px
+        padding: 0px 10px
+        width: 100%
+        +appearance(none)     
+        +border-radius(4px)  
+        font-weight: bold  
 
       select
+        background: url('../images/select-arrow-down.png') no-repeat center right  #fff
+        background-size: 32px, 11px
+        padding-left: 12px
+
+    .container
+      overflow: scroll
+      -webkit-overflow-scrolling: touch
+      margin-top: 48px
+      
+
+      .content-wrapper
+        margin: 10px
+        border: 1px solid #d4d4d4
+        background: #fff
+        overflow: hidden
+        +border-radius(5px)
+
+
+        &.button
+          background: none
+          border: 0px
+
+    header
+      height: 48px
+      width: 100%
+      position: fixed
+      top: 0px
+      border-bottom: 1px solid #2f3742
+      +background-image(linear-gradient(#2d82c3, #1d6c9a))
+      +text-shadow(#1d5d89 0px -1px -1px)
+
+      h1
+        color: #fff
+        font-size: 18px
+        font-weight: bold
+        line-height: 48px
+        text-align: center
+
+      .button
         border: 1px solid #054a71  
         color: #fff
         font-weight: bold
         height: 32px
+        left: 10px
         line-height: 30px
-        padding-left: 10px
+        position: absolute
         text-align: center
         text-decoration: none
+        top: 7px
         width: 60px
         +background-image(linear-gradient(#2d83c4, #1d6c9a))  
         +border-radius(4px)
-        +box-shadow(inset 0 1px 1px rgba(255, 255, 255, .21), 0 1px 0px rgba(255, 255, 255, .2))      
-        +appearance(none)  
+        +box-shadow(inset 0 1px 0px rgba(255, 255, 255, .21), 0 1px 0px rgba(255, 255, 255, .2))
 
-  &#home
-    margin-left: 0px
-    +border-radius(5px 5px 5px 5px)
-    +experimental(transform, translate3d(0%,0%,0))
-    img
-      width: 90%
-      max-width: 320px
-      margin-top: 8px
-      padding-left: 12px
-      padding-right: 12px
-    nav
-      //margin-top: 115px
-      margin-top: 35px
-      ul
-        border-bottom: 1px solid #fff        
-        border-top: 1px solid #ccc
-        height: auto
-        width: 100%
+      .fuel-selector
+        position: absolute
+        right: 10px
+        top: 7px
 
-
-        li a
-          border-bottom: 1px solid #ccc
-          border-top: 1px solid #fff
-          color: #484848
-          display: block
-          font-size: 16px
+        select
+          border: 1px solid #054a71  
+          color: #fff
           font-weight: bold
-          height: 55px
-          line-height: 55px
-          padding-left: 50px
-          +text-shadow(#fff 0px 1px 1px)
+          height: 32px
+          line-height: 30px
+          padding-left: 10px
+          text-align: center
+          text-decoration: none
+          width: 60px
+          +background-image(linear-gradient(#2d83c4, #1d6c9a))  
+          +border-radius(4px)
+          +box-shadow(inset 0 1px 1px rgba(255, 255, 255, .21), 0 1px 0px rgba(255, 255, 255, .2))      
+          +appearance(none)  
 
-        li
-          &#near-me
-            background: url('../images/big-button-sprites.png') no-repeat 7px 8px
-            background-size: 35px, 153px
-          &#map
-            background: url('../images/big-button-sprites.png') no-repeat 7px -48px
-            background-size: 35px, 153px
-          &#search
-            background: url('../images/big-button-sprites.png') no-repeat 7px -105px
-            background-size: 35px, 153px                        
-    &.current
-      margin: 0px
-      +experimental(transform, translate3d(39%,0%,0))      
-  &#search  
-    +box-shadow(0 0px 5px rgba(black, .5))
+    &#home
+      margin-left: 0px
+      +border-radius(5px 5px 5px 5px)
+      +experimental(transform, translate3d(0%,0%,0))
+      img.top-logo
+        width: 60%
+        max-width: 280px
+        position: absolute
+        left: 0px
+        right: 0px
+        margin: 0 auto
+        top: 25px
 
-
-
-
-  &#results          
-    ul
-      background: url('../images/fw-loading-test.gif') no-repeat center center
-      background-size: 88px, 88px
-      min-height: 300px
-
-      li
-        border-bottom: 1px solid #dcdde1  
-        height: 88px
-        overflow: hidden
-        padding: 10px 10px
-        +text-shadow(#fff 0px 1px 1px)
-
-        &:nth-child(even)
-          background: #f2f2f2
-
-        &:last-child
-          border-bottom: 0px
-
-
-          h1
-            background: #4aa3c9
-            border: 1px solid #449bc4        
-            color: #fff
-            font-size: 18px
-            font-weight: bold
-            height: 28px
-            line-height: 26px
-            text-align: center
-            width: 100%
-            +border-radius(3px)             
-            +box-shadow(inset 0 1px 1px #8cc1d9, 0 1px 0px rgba(0, 0, 0, .1))
-            +text-shadow(#3b819f 0px 1px 1px)
-
-
-            
-
-        span.primary
-          float: left
+        
+      nav
+        margin-top: 100px
+        //margin-top: 35px
+        ul
+          border-bottom: 1px solid #fff        
+          border-top: 1px solid #ccc
+          height: auto
           width: 100%
 
-          h3
-            color: #404040
-            font-size: 18px
+
+          li a
+            border-bottom: 1px solid #ccc
+            border-top: 1px solid #fff
+            color: #484848
+            display: block
+            font-size: 15px
             font-weight: bold
-            line-height: 22px
-            overflow: hidden
-            white-space: nowrap
-            width: 98%
-            +experimental(text-overflow, ellipsis)
-          h4
-            color: #818181
-            font-size: 14px
-            font-weight: normal
-            height: auto
-            line-height: 16px  
-            overflow: hidden
-            white-space: nowrap
-            width: 100%
-            text-transform: capitalize
-            +experimental(text-overflow, ellipsis)            
+            height: 55px
+            line-height: 55px
+            padding-left: 10px
+            +text-shadow(#fff 0px 1px 1px)
+
+            i
+              margin-right: 2px
+              color: #666
+
+              &.icon-large
+                font-size: 1.4em
+                vertical-align: top
+                       
+      &.current
+        margin: 0px
+        +experimental(transform, translate3d(39%,0%,0))      
+    &#search  
+      +box-shadow(0 0px 5px rgba(black, .5))
+
+
+
+
+    &#results          
+      ul
+        background: url('../images/spinner.gif') no-repeat center center
+        background-size: 24px, 24px
+        min-height: 300px
+        list-style: none
         
-        span.secondary
-          float: left
-          width: 100% 
-          margin-top: 5px
+        li
+          border-bottom: 1px solid #dcdde1  
+          height: 88px
+          overflow: hidden
+          list-style: none
+          
+          +text-shadow(#fff 0px 1px 1px)
 
-          .button
-            width: 30%
-            height: 25px
+          &:nth-child(even)
+            background: #eef1f4
+
+          &:last-child
+            border-bottom: 0px
+
+          a
             float: left
-            +border-radius(3px)
-            margin-right: 5px
-            color: #fff
-            line-height: 25px
-            text-align: center
-            font-size: 16px
-            font-weight: bold
-            -webkit-box-shadow: inset 0 1px 1px rgba(43, 48, 60, .18), 0 1px 0 white
-            
-            &.price 
-              background: #287cb7
+            overflow: hidden
+            padding: 10px 10px
+
+            h1
+              background: #4aa3c9
+              border: 1px solid #449bc4        
+              color: #fff
+              font-size: 18px
+              font-weight: bold
+              height: 28px
+              line-height: 26px
+              text-align: center
+              width: 100%
+              +border-radius(3px)             
+              +box-shadow(inset 0 1px 1px #8cc1d9, 0 1px 0px rgba(0, 0, 0, .1))
               +text-shadow(#3b819f 0px 1px 1px)
 
-            &.distance
-              background: #287cb7
-              +text-shadow(#3b819f 0px 1px 1px)
-            &.type
-              background: #287cb7
-              +text-shadow(#3b819f 0px 1px 1px)
-  &#detailsView
-    h2
-      margin: 0px
-      font-size: 24px
+          span.primary
+            float: left
+            width: 100%
 
-    h3
-      font-size: 18px
+            h3
+              color: #4d5870
+              font-size: 18px
+              font-weight: bold
+              line-height: 22px
+              overflow: hidden
+              white-space: nowrap
+              width: 98%
+              +experimental(text-overflow, ellipsis)
+            h4
+              color: #818181
+              font-size: 14px
+              font-weight: normal
+              height: auto
+              line-height: 16px  
+              overflow: hidden
+              white-space: nowrap
+              width: 100%
+              text-transform: capitalize
+              +experimental(text-overflow, ellipsis)            
+          
+          span.secondary
+            float: left
+            width: 100% 
+            margin-top: 5px
 
-    .map-container
-      overflow: hidden
-      border-bottom: 1px solid #d4d4d4
-      min-height: 100px
-      +single-transition(all, 0.5s, ease-in-out)
-      img
-        max-width: 100%
-        +border-radius(5px 5px 0px 0px)
-        display: block
+            .button
+              width: 30%
+              height: 22px
+              float: left
+              +border-radius(3px)
+              margin-right: 5px
+              color: #fff
+              line-height: 22px
+              text-align: center
+              font-size: 16px
+              font-weight: bold
+              -webkit-box-shadow: inset 0 1px 1px rgba(43, 48, 60, .18), 0 1px 0 white
+              
+              &.price 
+                background: #61a319
+                +text-shadow(#3b819f 0px 1px 1px)
 
-    address
-      font-style: normal   
-      font-size: 12px
-      padding: 15px
-      padding-left: 20px
-      border-top: 1px solid #d4d4d4
-      border-bottom: 1px solid #d4d4d4
+              &.distance
+                background: #287cb7
+                +text-shadow(#3b819f 0px 1px 1px)
+              &.type
+                background: #287cb7
+                +text-shadow(#3b819f 0px 1px 1px)
+    &#detailsView
+      h2
+        margin: 0px
+        font-size: 24px
+
+      h3
+        font-size: 18px
+
+      .map-container
+        overflow: hidden
+        border-bottom: 1px solid #d4d4d4
+        min-height: 100px
+        +single-transition(all, 0.5s, ease-in-out)
+        background: url('../images/spinner.gif') no-repeat center center
+        background-size: 24px, 24px
+        img
+          max-width: 100%
+          +border-radius(5px 5px 0px 0px)
+          display: block
+
+      address
+        font-style: normal   
+        font-size: 12px
+        padding: 15px
+        padding-left: 20px
+        border-top: 1px solid #d4d4d4
+        border-bottom: 1px solid #d4d4d4
 
 
-    .price-distance-container
-      overflow: hidden
-      span
-        width: 50%
-        float: left
+      .price-distance-container
+        overflow: hidden
+        span
+          width: 50%
+          float: left
+          height: 44px
+          line-height: 44px
+          text-align: center
+
+          &:first-child
+            border-right: 1px solid #d4d4d4
+
+      .directions a
+        width: 90%
         height: 44px
-        line-height: 44px
+        display: block
+        margin: 10px auto
         text-align: center
+        line-height: 44px
+        font-size: 18px
+        font-weight: bold
+        color: #fff
+        +background-image(linear-gradient(#2d82c3, #1d6c9a))
+        +border-radius(5px)
+        +text-shadow(#1d5d89 0px -1px -1px)
 
-        &:first-child
-          border-right: 1px solid #d4d4d4
+        i
+          margin-right: 8px
 
-    .directions a
-      width: 80%
-      height: 44px
-      display: block
-      margin: 10px auto
-      text-align: center
-      line-height: 44px
-      font-size: 18px
-      font-weight: bold
-      color: #fff
-      +background-image(linear-gradient(#2d82c3, #1d6c9a))
-      +border-radius(5px)
-      +text-shadow(#1d5d89 0px -1px -1px)
+  .fullsite
+    height: 22px
+    position: absolute
+    bottom: 0px
+    text-align: center
+    line-height: 22px
+    font-size: 12px
+    width: 100%
+    +background-image(linear-gradient(#2d82c3, #1d6c9a))
 
 
 
 
 input::-webkit-input-placeholder
-  color:  #404040
+  color:  #666
 input:-moz-placeholder
-  color:  #404040
+  color:  #666
 
+
+
+
+.slider
+  line-height: 50px
+  margin-left: 11px
+  position: relative
+
+
+  input
+    &[type=checkbox]
+      position: absolute
+      border: 1px solid #ccc
+      right: 10px
+      top: 9px
+      height: 32px
+      width: 88px
+      -webkit-appearance: none
+      -webkit-border-radius: 4px
+      background-image: url(../images/checkbox-background.png)
+      background-position: -52px 0
+      background-repeat: no-repeat
+      -webkit-animation-timing-function: ease-in-out
+      -webkit-animation-duration: 400ms
+      -webkit-animation-name: checkbox-switch-off
+    &:checked[type=checkbox]
+      background-position: 0 0
+      -webkit-animation-name: checkbox-switch-on
+
+@-webkit-keyframes checkbox-switch-on
+  from
+    background-position: -52px 0
+  to
+    background-position: 0 0
+
+
+@-webkit-keyframes checkbox-switch-off
+  from
+    background-position: 0 0
+  to
+    background-position: -52px 0
 
 
 
@@ -441,6 +485,12 @@ input:-moz-placeholder
       &#home
         width: 78%
 
+      &#map
+        background: url("../images/spinner-map.gif") no-repeat 20% center #2F3742 !important
+        
+        
+
+
 
       &.current
         +experimental(transform, translate3d(250px,0%,0) scale(1))
@@ -466,7 +516,8 @@ input:-moz-placeholder
       margin-left: 0px
 
       &#home
-        width: 78%  
+        width: 74%  
+        +experimental(transform, translate3d(39%,0%,0))
   
 
       &.current
