Bringing changes up to date 17/04/12

--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -403,7 +403,7 @@ input:-moz-placeholder
   input
     &[type=checkbox]
       position: absolute
-      border: 1px solid #ccc
+      
       right: 10px
       top: 9px
       height: 32px
@@ -411,7 +411,8 @@ input:-moz-placeholder
       -webkit-appearance: none
       -webkit-border-radius: 4px
       background-image: url(../images/checkbox-background.png)
-      background-position: -52px 0
+      background-size: 145px, 32px
+      background-position: -56px 0
       background-repeat: no-repeat
       -webkit-animation-timing-function: ease-in-out
       -webkit-animation-duration: 400ms
@@ -422,7 +423,7 @@ input:-moz-placeholder
 
 @-webkit-keyframes checkbox-switch-on
   from
-    background-position: -52px 0
+    background-position: -56px 0
   to
     background-position: 0 0
 
@@ -431,7 +432,7 @@ input:-moz-placeholder
   from
     background-position: 0 0
   to
-    background-position: -52px 0
+    background-position: -56px 0
 
 
 
